--- a/src/public/sass/layout/_mainGrid.scss
+++ b/src/public/sass/layout/_mainGrid.scss
@@ -172,6 +172,7 @@
       flex-direction: column;
       user-select: none;
       overflow: hidden;
+      overflow-y: auto;
     }
   }
 
